--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 
 #body {
   width: 70%;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 #pagedict {
@@ -65,6 +65,10 @@
 	transform: translateX(-50%);
 }
 
+code {
+	background-color: #eee;
+}
+
 .elaborate-button {
 	font-size: 14px;
 	padding: 5px 10px;
@@ -86,6 +90,12 @@
 body {
   font-family: sans-serif;
   padding: 10px;
+}
+
+#textgohere,#chatgohere {
+	position: absolute;
+	overflow-y:scroll;
+	height: calc(90%);
 }
 
 #btn {
