--- a/styles.css
+++ b/styles.css
@@ -543,4 +543,8 @@ fieldset > button {
 	   position: relative;
 	   width: calc(100%);
    }
+  
+  .content4 {
+    flex-direction: column;
+  }
 }
