--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,54 @@
   padding: 15px;
 }
 
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+
+background-color: #ddd;
+border-radius: 5px;
+color: black;
+cursor: pointer;
+padding: 10px;
+
+border: none;
+text-align:center;
+outline: none;
+font-size: 15px;
+margin-top: 10px;
+display: block;
+width: 90%;
+margin-left: auto;
+margin-right: auto;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.activeCollapse, .collapsible:hover {
+background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.collapseContent {
+	/*padding: 0 18px;*/
+	margin-top: 5px;
+	border-radius: 5px;
+	display: none;
+	overflow: hidden;
+	background-color: #f1f1f1;
+	width: 90%;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+} 
+
+.collapseContent p {
+	margin-top: 8px;
+	margin-bottom: 8px;
+}
+
+.collapseContent textarea {
+	resize: none;
+}
+
 #newPage {
 	width: 100%;
 	text-align:center;
