--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ background-color: #ccc;
 } 
 
 .collapseContent p {
-	margin-top: 8px;
+	margin-top: 2px;
 	margin-bottom: 8px;
 }
 
@@ -355,6 +355,10 @@ label.tab {
     border-color: #999999;
 }
 
+#tab7.live {
+	border-color: red;
+}
+
 #tab1:checked~.content1 {
     display: block;
 }
@@ -504,6 +508,7 @@ fieldset > textarea {
 
 .content7 h3 {
 	display: list-item;
+	margin-left: 1em;
 }
 
 .content7 button {
@@ -599,6 +604,66 @@ fieldset > button {
 	
 	transform: rotateX(180deg);
 }
+
+.loading:after {
+	overflow: hidden;
+	display: inline-block;
+	vertical-align: bottom;
+	-webkit-animation: ellipsis steps(4, end) 900ms infinite;
+	animation: ellipsis steps(4, end) 900ms infinite;
+	content: "\2026";
+	/* ascii code for the ellipsis character */
+	width: 0px;
+  }
+  
+  @keyframes ellipsis {
+	to {
+	  width: 40px;
+	}
+  }
+  
+  @-webkit-keyframes ellipsis {
+	to {
+	  width: 40px;
+	}
+  }
+
+.centerDiv {
+	display:block;
+	text-align: center;
+	margin: auto;
+}
+
+.studyButtons {
+	padding: 10px;
+	background-color: #ccccee;
+	border-radius: 10px;
+}
+
+.liveDiv {
+	background-color: #eeeeee;
+	border-radius: 10px;
+	border: 2px solid #aaaaaa;
+	margin-bottom: 10px;
+	padding: 5px;
+}
+
+.debug {
+	display: none;
+}
+
+/*@media (min-width: 601px) {
+	#liveField {
+		column-count: 2;
+	}
+
+	.liveDiv {
+		display: inline-block;
+  		box-sizing: border-box;
+		padding: 10px;
+		height: 300px;
+	}
+}*/
 
 @media (max-width: 600px) {
    .wrapper {
