--- a/styles.css
+++ b/styles.css
@@ -682,11 +682,13 @@ fieldset > button {
 #liveMeter {
 	width: 0;
 	height: 10px;
-	margin: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: auto;
+	margin-right: auto;
 	border-radius: 5px;
 	background-color: navy;
 	text-align:center;
-	margin: auto;
 }
 
 @media (max-width: 600px) {
