--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
 
 #body{
   padding: 15px;
+  flex-grow: 3;
 }
 
 /* Style the button that is used to open and close the collapsible content */
@@ -207,8 +208,9 @@ background-color: #ccc;
 .sidebar {
 	position: -webkit-sticky;
 	position: sticky;
+	flex-grow: 5;
 	top: 15px;
-	width: 25%;
+	/*width: 25%;*/
 	height: 100vh;
 }
 
