--- a/styles.css
+++ b/styles.css
@@ -210,9 +210,10 @@ background-color: #ccc;
 .sidebar {
 	position: -webkit-sticky;
 	position: sticky;
-	flex-grow: 5;
+	/*flex-grow: 5;*/
 	top: 15px;
-	/*width: 25%;*/
+	width: 20%;
+	min-width: 250px;
 	height: 100vh;
 }
 
@@ -334,6 +335,8 @@ label.tab {
     height: 30px;
     background-color: var(--element-bg-1);
     border-style: solid solid none solid;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
     border-width: 2px;
     border-color: transparent;
 }
